# metatrader5ext

./: .gitignore  README.md  build.py  mql_client.py  pyproject.toml
MQL5/: API.mqproj  Broadcast.mq5  Hello.mq5  README.md  Spy Control panel MCM.mq5  iSpy.mq5
MQL5/Experts/: MT5Ext.ex5  MT5Ext.mq5  MTAPI.mq5  StreamerSockets.mq5
MQL5/Experts/Others/: MTAPI.ex5  stream.mq5
MQL5/Include/MT5Ext/: MT5Ext.mqh  Websockets.mqh  comm.mqh  comm2.mqh  ext.mqh  helpers.mqh  rest-handlers.mqh  stream-handlers.mqh  utils.mqh
MQL5/Include/MT5Streamer/: Parse.mqh  RestApi.mqh  TimeSeries.mqh  Websockets.mqh
MQL5/Include/Others/: Common.mqh  Json.mqh
MQL5/Libraries/mt-web/: mt-web.sln
MQL5/Libraries/mt5-rest/: main.cpp
docs/: Constantes.md  README.md  client.py  decoder.py  jstrader_api_V1_01.js  modes.md
docs/Others/: Info.md  MTAPI.py  Test.py  TimeSeries.md  Trade.md  Websockets.mqh  common.py  execution.py  ibapi_connection.py
docs/Others/Experts/: MT5Streamer.mq5  stream.ex5
examples/: ea.py  ea_client.py  get_account_info.py  mt5_client.py  stream_data.py  ws_client.py
metatrader5ext/: MetaTrader5.py  __init__.py  aggregator.py  common.py  connection.py  data_aggregator.py  errors.py  logging.py  metatrader5ext.py  terminal.py  timeframe_agg.py  utils.py
metatrader5ext/MetaTrader5/: __init__.py  terminal.py
metatrader5ext/ea/: __init__.py  client.py  comm.py  comm_msg.py  connection.py  connection2.py  execution.py  models.py  order.py
metatrader5ext/metatrader5_/: __init__.py  config.py
tests/: test_MetaTrader5.py  test_stream_manager.py
(+4 files in other folders)
